# Thesis-Project-MPC-Energy-Trading

./: .gitignore  Cargo.toml  README.md
Simulator/: Cargo.toml  README.md
Simulator/src/: stakeholders.rs  utilities.rs
Simulator/src/devices_and_equipments/: pv_panels.rs
Simulator/src/stakeholders/: household.rs
Simulator/src/utilities/: double_auction.rs  general_functions.rs  simulator.rs
src/: devices_and_equipments.rs  double_auction.rs  general_functions.rs  home_appliances.rs  main.rs  stakeholders.rs  user.rs
src/devices_and_equipments/: battery.rs  home_appliances.rs  pv_panels.rs
src/stakeholders/: aggregator.rs  household.rs  user.rs
src/utilities/: double_auction.rs  general_functions.rs  simulator.rs
zk_double_auction/: Cargo.toml  ZkDoubleAuctionTest.java
zk_double_auction/src/: contract.rs  zk_compute.rs
